# i-am-stuck

./: Auth0.md  LICENSE  README.md  TalkJS.md  slouching-towards-env.md  stuck-mixed-service.yaml
.github/workflows/: codeql.yml  go_unit_tests.yml  java-jersey.yml
fastapi/: .gitignore  README.md  pyproject.toml  requirements.txt  stuck.properties.sample
fastapi/k8s/: Dockerfile  stuck-fastapi.yaml
fastapi/src/stuck_fastapi/: __init__.py  config.py  main.py  utils.py
fastapi/tests/: test_main.http  test_main.py  test_pydantic_settings.py  test_pyjwt.py  test_sqlalchemy.py  test_sqlmodel.py
gatsby/: README.md
gin/: .env.example  .gitignore  README.md  go.mod  go.sum  main.go
gin/k8s/: Dockerfile  stuck-gin.yaml
gin/middleware/: access_token.go  auth0.go
gin/routes/: crud.go  curd_test.go  stuck_gin.go  stuck_http.go
gin/utils/: jwks_test.go  jwt.go  jwt_test.go  uuid_test.go
gin/utils/db/: mysql.go  (+1 more)
jetty-jersey/: .gitignore  .project  README.md  pom.xml  stuck.properties.sample
jetty-jersey/k8s/: Dockerfile  stuck-jetty-jersey.yaml
k8s/: README.md  decouple-config.md  kuard-for-debug.yml  stuck-config.yml  stuck-secret.yml
nextjs/: .env.example  .gitignore  README.md  eslint.config.mjs  instrumentation.ts  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
nextjs/app/: globals.css  layout.tsx  page.tsx
nextjs/components/: chat-box.tsx  gMap.tsx  geo.tsx  map-overlay.tsx  new-button.tsx  new-stuck.tsx
nextjs/k8s/: Dockerfile  stuck-nextjs.yaml
nextjs/lib/: auth0.ts  icon.ts  miscellaneous.ts  types.ts
(+27 files in other folders)
