[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stuck_fastapi"
version = "0.0.1"
authors = [
  { name="ttron", email="006@tsst.xyz" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
# license = "MIT"
# license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/006/i-am-stuck"
Issues = "https://github.com/006/i-am-stuck/issues"